--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>My Video</title>
   <style>
     body { margin: 0; background: black; }
-    video { width: 100%; height: auto; display: block; }
+    video { width: 100%; height: 100%: auto; display: block; }
   </style>
 </head>
 <body>
