--- a/index.html
+++ b/index.html
@@ -3,15 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Video</title>
+  <title>Full Screen Video</title>
   <style>
-    body { margin: 0; background: black; }
-    video { width: 100%; height: 100%: auto; display: block; }
+    /* Reset margins and make body fill the screen */
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden; /* hides scrollbars */
+      background-color: black;
+    }
+
+    /* Make the video cover the entire screen */
+    video {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover; /* makes sure video fills without stretching */
+    }
   </style>
 </head>
 <body>
   <video autoplay muted loop playsinline>
-    <source src="SparklingSnow.mp4" type="video/mp4">
+    <source src="my-video.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
 </body>
