--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   <video autoplay muted loop playsinline>
-    <source src="my-video.mp4" type="video/mp4">
+    <source src="SparklingSnow.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
 </body>
